--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-native-maps": "^0.15.3",
+    "react-native-maps-directions": "^1.6.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2"
   },
