--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyCkf3Ik_4G-w2krz89NL9CkNTreh43awds"/>
     </application>
 
 </manifest>
