--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,3 +22,12 @@ allprojects {
         }
     }
 }
+
+ext {
+    compileSdkVersion   = 26
+    targetSdkVersion    = 26
+    buildToolsVersion   = "26.0.2"
+    supportLibVersion   = "26.1.0"
+    googlePlayServicesVersion = "10.0.1"
+    androidMapsUtilsVersion = "0.5+"
+}
