--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "native-base": "^2.4.1",
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-native-maps": "^0.15.3",
