--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "^0.55.3",
     "react-native-geolocation-service": "^1.0.3",
     "react-native-google-places-autocomplete": "^1.3.6",
+    "react-native-loading-view": "^1.0.0",
     "react-native-maps": "^0.15.3",
     "react-native-maps-directions": "^1.6.0",
     "react-native-router-flux": "^3.43.0",
