--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.4.1",
     "react": "16.3.1",
     "react-native": "^0.55.3",
+    "react-native-communications": "^2.2.1",
     "react-native-geolocation-service": "^1.0.3",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-loading-view": "^1.0.0",
