ny infoheader och feedback med korrekt input

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@mapbox/polyline": "github:mapbox/polyline",
     "axios": "^0.18.0",
+    "fish": "0.0.0",
     "native-base": "^2.4.1",
     "react": "16.3.1",
     "react-native": "^0.55.3",
+    "react-native-calendars": "^1.18.2",
     "react-native-communications": "^2.2.1",
     "react-native-geolocation-service": "^1.0.3",
     "react-native-google-places-autocomplete": "^1.3.6",
