vissa bortkommenterade grejer plus ny loadingscreen

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,4 +6,6 @@ pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga/yoga.podspec
 
 pod 'GoogleMaps'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
 end
