footer borta, en slags modal och ny searchbar

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,4 +8,6 @@ pod 'GoogleMaps'
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'react-native-add-calendar-event', :path => '../node_modules/react-native-add-calendar-event'
+
 end
