--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "^2.4.1",
     "react": "16.3.1",
     "react-native": "^0.55.3",
+    "react-native-add-calendar-event": "^1.1.1",
     "react-native-calendars": "^1.18.2",
     "react-native-communications": "^2.2.1",
     "react-native-geolocation-service": "^1.0.3",
