--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.3.1",
     "react-native": "^0.55.3",
     "react-native-add-calendar-event": "^1.1.1",
+    "react-native-calendar-events": "^1.5.0",
     "react-native-calendars": "^1.18.2",
     "react-native-communications": "^2.2.1",
     "react-native-geolocation-service": "^1.0.3",
