--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-calendar-events": "^1.5.0",
     "react-native-calendars": "^1.18.2",
     "react-native-communications": "^2.2.1",
+    "react-native-custom-actionsheet": "0.0.4",
     "react-native-elements": "^0.19.1",
     "react-native-geolocation-service": "^1.0.3",
     "react-native-google-places-autocomplete": "^1.3.6",
