--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-image-header": "^1.0.1",
     "react-native-image-header-scroll-view": "^0.8.2",
+    "react-native-keyboard-aware-scroll-view": "^0.5.0",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-loading-view": "^1.0.0",
     "react-native-maps": "^0.15.3",
